--- a/release/app/package.json
+++ b/release/app/package.json
@@ -1,12 +1,10 @@
 {
-  "name": "electron-react-boilerplate",
-  "version": "4.6.0",
-  "description": "A foundation for scalable desktop apps",
+  "name": "goat",
+  "version": "0.0.1",
+  "description": "By Suveen.",
   "license": "MIT",
   "author": {
-    "name": "Electron React Boilerplate Maintainers",
-    "email": "electronreactboilerplate@gmail.com",
-    "url": "https://github.com/electron-react-boilerplate"
+    "name": "Suveen"
   },
   "main": "./dist/main/main.js",
   "scripts": {
