--- a/package.json
+++ b/package.json
@@ -74,14 +74,12 @@
   },
   "dependencies": {
     "@electron/notarize": "^2.3.2",
-    "@types/electron": "^1.4.38",
     "electron-debug": "^3.2.0",
     "electron-log": "^4.4.8",
     "electron-updater": "^6.1.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.16.0",
-    "save-dev": "^0.0.1-security",
     "tldraw": "^3.11.1"
   },
   "devDependencies": {
@@ -91,6 +89,7 @@
     "@teamsupercell/typings-for-css-modules-loader": "^2.5.2",
     "@testing-library/jest-dom": "^6.1.3",
     "@testing-library/react": "^14.0.0",
+    "@types/electron-devtools-installer": "^2.2.5",
     "@types/jest": "^29.5.5",
     "@types/node": "20.6.2",
     "@types/react": "^18.2.21",
@@ -164,16 +163,14 @@
       "node_modules",
       "package.json"
     ],
+    "icon": "assets/icon.png",
     "mac": {
       "sign": ".erb/scripts/notarize.js",
       "notarize": false,
-      "target": {
-        "target": "default",
-        "arch": [
-          "arm64",
-          "x64"
-        ]
-      },
+      "target": [
+        "zip",
+        "dmg"
+      ],
       "type": "distribution",
       "hardenedRuntime": true,
       "entitlements": "assets/entitlements.mac.plist",
@@ -192,7 +189,9 @@
           "type": "link",
           "path": "/Applications"
         }
-      ]
+      ],
+      "artifactName": "${productName}-${version}.${ext}",
+      "format": "ULFO"
     },
     "win": {
       "publisherName": "Goat",
