--- a/package.json
+++ b/package.json
@@ -74,13 +74,21 @@
   },
   "dependencies": {
     "@electron/notarize": "^2.3.2",
+    "@radix-ui/react-slot": "^1.2.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "date-fns": "^3.6.0",
     "electron-debug": "^3.2.0",
     "electron-log": "^4.4.8",
     "electron-updater": "^6.1.4",
+    "lucide-react": "^0.488.0",
     "react": "^18.2.0",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.16.0",
-    "tldraw": "^3.11.1"
+    "tailwind-merge": "^3.2.0",
+    "tldraw": "^3.11.1",
+    "tw-animate-css": "^1.2.5"
   },
   "devDependencies": {
     "@electron/rebuild": "^3.3.0",
