--- a/package.json
+++ b/package.json
@@ -90,8 +90,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.16.0",
     "tailwind-merge": "^3.2.0",
-    "tldraw": "^3.11.1",
-    "tw-animate-css": "^1.2.5"
+    "tldraw": "^3.11.1"
   },
   "devDependencies": {
     "@electron/rebuild": "^3.3.0",
