--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,7 @@ APPLE_TEAM_ID=
 APPLE_ID=
 APPLE_APP_SPECIFIC_PASSWORD=
 CI=
+CSC_LINK=
+CSC_KEY_PASSWORD=
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
