--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
   "dependencies": {
     "@electron/notarize": "^2.3.2",
     "@radix-ui/react-dialog": "^1.1.10",
+    "@radix-ui/react-label": "^2.1.6",
     "@radix-ui/react-separator": "^1.1.3",
     "@radix-ui/react-slot": "^1.2.0",
     "@radix-ui/react-tabs": "^1.1.8",
