--- a/package.json
+++ b/package.json
@@ -84,9 +84,11 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
+    "dotenv": "^16.5.0",
     "electron-debug": "^3.2.0",
     "electron-log": "^4.4.8",
     "lucide-react": "^0.488.0",
+    "ngrok": "^5.0.0-beta.2",
     "react": "^18.2.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.2.0",
