--- a/package.json
+++ b/package.json
@@ -93,7 +93,8 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.16.0",
     "tailwind-merge": "^3.2.0",
-    "tldraw": "^3.11.1"
+    "tldraw": "^3.11.1",
+    "zod": "^3.24.4"
   },
   "devDependencies": {
     "@electron/rebuild": "^3.3.0",
