--- a/package.json
+++ b/package.json
@@ -82,16 +82,17 @@
     "@radix-ui/react-tabs": "^1.1.8",
     "@radix-ui/react-tooltip": "^1.2.0",
     "@tanstack/react-query": "^5.75.1",
+    "@types/source-map-support": "^0.5.10",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
-    "electron-debug": "^3.2.0",
     "electron-log": "^4.4.8",
     "lucide-react": "^0.488.0",
     "react": "^18.2.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.16.0",
+    "source-map-support": "^0.5.21",
     "tailwind-merge": "^3.2.0",
     "tldraw": "^3.11.1",
     "zod": "^3.24.4"
@@ -123,7 +124,8 @@
     "detect-port": "^1.5.1",
     "electron": "^31.3.0",
     "electron-builder": "^24.13.3",
-    "electron-devtools-installer": "^3.2.0",
+    "electron-debug": "^4.1.0",
+    "electron-devtools-installer": "^3.2.1",
     "electron-updater": "^6.6.2",
     "electronmon": "^2.0.2",
     "eslint": "^8.49.0",
